--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,7 @@ dependencies = [
     "fastapi>=0.122.0",
     "flask>=3.1.2",
     "flask-socketio>=5.5.1",
+    "pydantic-ai>=1.26.0",
+    "python-dotenv>=1.2.1",
     "uvicorn>=0.38.0",
 ]
